hphp/test/slow/traits/requireclass/requireclass_hierarchy_02.bad.php.expectf
Fatal error: Trait 'C' may only be used from the class 'D' in %s on line 12
